Adding some more study notes.

--- a/SQL/Advanced Queries.ipynb
+++ b/SQL/Advanced Queries.ipynb
@@ -2186,7 +2186,7 @@
    "source": [
     "# Distinct\n",
     "\n",
-    "`DISTINCT` deduplicates result rows."
+    "`DISTINCT` deduplicates result rows (case sensitively)."
    ]
   },
   {
