--- a/SQL/Basic Statements.ipynb
+++ b/SQL/Basic Statements.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "f9a43def",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.10.0. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql duckdb://"
@@ -2855,9 +2863,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abd5b037",
+   "metadata": {},
+   "source": [
+    "# Aggregate on Whole Result Set\n",
+    "\n",
+    "If you apply an aggreage like `COUNT` to a whole result set (no `GROUPING` clause), then you'll get back 1 result with that aggregate applied (renamed or not depending on whether you use `AS`).\n",
+    "\n",
+    "If you try to get any __other columns__ (not in aggregate), that will be an __error__.\n",
+    "\n",
+    "`COUNT(name)` will get the # of non-null names.\n",
+    "\n",
+    "`COUNT(DISTINCT name)` will dedupe (case sensitive).\n",
+    "\n",
+    "You can do math on these values in the final result as shown here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cc0a6909",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-------+\n",
+       "| Count |\n",
+       "+-------+\n",
+       "+-------+"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees5 (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50) NULL,\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees5 (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 50000),\n",
+    "       (2, 'Jane Smith', 35, 60000),\n",
+    "       (3, 'Mike Johnson', 40, 70000),\n",
+    "       (4, 'Emily Davis', 25, 45000),\n",
+    "       (5, 'David Brown', 45, 80000),\n",
+    "        (6, NULL, 50, 90000),\n",
+    "        (7, 'David Brown', 100, 100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "19bf5242",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count(\"name\")</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------------+\n",
+       "| count(\"name\") |\n",
+       "+---------------+\n",
+       "|       6       |\n",
+       "+---------------+"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT COUNT(name) FROM employees5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "89315161",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count(DISTINCT \"name\")</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+------------------------+\n",
+       "| count(DISTINCT \"name\") |\n",
+       "+------------------------+\n",
+       "|           5            |\n",
+       "+------------------------+"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT COUNT(DISTINCT name) FROM employees5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cba06d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>diff</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+------+\n",
+       "| diff |\n",
+       "+------+\n",
+       "|  1   |\n",
+       "+------+"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT COUNT(name) - COUNT(DISTINCT name) AS diff FROM employees5;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a3f85a",
+   "id": "4e7c2893",
    "metadata": {},
    "outputs": [],
    "source": []
