--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -188,18 +188,21 @@
    "source": [
     "# Static Classes\n",
     "\n",
-    "If you want to enforce that all the members of a class must be static, you can declare the class as static at the top-level."
+    "Unlike in C#, marking a class `static` does not mean it can only have static members.  In fact, at the top-level, it has __no meaning__.  It only has meaning for child classes as described below.\n",
+    "\n",
+    "Classes with all static members in the library, such as `Collections` and `Arrays`, are not marked static.  Sometimes they are marked final."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "8a72c559",
    "metadata": {},
    "outputs": [],
    "source": [
     "static class MyClass {\n",
     "    static void main(String[] args) {\n",
+    "        new MyClass(); // default constructor exists despite static\n",
     "    }\n",
     "}\n",
     "\n",
@@ -1163,6 +1166,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5379798",
+   "metadata": {},
+   "source": [
+    "# Default Object Method Implementations\n",
+    "\n",
+    "- `clone` is actually `protected` and throws a checked exception\n",
+    "    - but you can make it `public` in subclass and not throw\n",
+    "    - in other words, no implementation by default\n",
+    "- `toString` writes out some representation of the classpath and object reference\n",
+    "- `equals` does reference equality on the objects\n",
+    "    - meaning you can use any object as a key in a collection (eg. whether node is visited)\n",
+    "- `hashcode` similarly hashes the reference itself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f2d024cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPL.$JShell$12B$MyClass@2daa3be2\n",
+      "\n",
+      "766131170\n",
+      "676749144\n",
+      "\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass {\n",
+    "    public MyClass clone() { return new MyClass(); }\n",
+    "} // all methods come straight from Object\n",
+    "\n",
+    "class ObjectDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass m = new MyClass();\n",
+    "\n",
+    "        System.out.println(m.toString());\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(m.hashCode());\n",
+    "        System.out.println((new MyClass()).hashCode());\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(m.equals(null));\n",
+    "        System.out.println(m.equals(m));\n",
+    "        System.out.println(m.equals(new MyClass()));\n",
+    "        \n",
+    "        System.out.println(m.clone().equals(m));\n",
+    "    }\n",
+    "}\n",
+    "ObjectDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08a8992e",
    "metadata": {},
    "source": [
@@ -1183,7 +1250,9 @@
     "- The `display` method of the inner class is called, which prints the values of the outer and inner variables.\n",
     "- The `display` method of the static nested class is called directly using the outer class name (`OuterClass.StaticNestedClass.display()`).\n",
     "\n",
-    "Note: __Nested interfaces__ are automatically `static` because they can't be non-static like a nested class can."
+    "Note: __Nested interfaces__ are automatically `static` because they can't be non-static like a nested class can. \n",
+    "\n",
+    "Note: __Nested classes__ can access their __outer class private members__ and the other way around (two-way trust)."
    ]
   },
   {
@@ -2231,6 +2300,50 @@
     "}\n",
     "\n",
     "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97a77307",
+   "metadata": {},
+   "source": [
+    "# Exceptions of Subclasses\n",
+    "\n",
+    "In general, you can __throw less__ than the base class, but you cannot throw more.  That way, the base knows what it will get at most.\n",
+    "\n",
+    "Note also that __unchecked don't follow these rules__.  In the example below, we could freely specify more unchecked exceptions on both that don't correlate.  The compiler doesn't require any of them in the usage.\n",
+    "\n",
+    "Notice that the compiler will expect you to catch based on __what interface__ you use, not based on the implementation.  That lets you do things like override `clone` to not throw."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2ca50643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaseClass {\n",
+    "    void f() throws /* checked */ java.io.FileNotFoundException, /*unchecked */ IndexOutOfBoundsException {}\n",
+    "}\n",
+    "\n",
+    "class SubClass extends BaseClass {\n",
+    "    void f() /*throws InterruptedException*/ throws /* unchecked */ IllegalArgumentException {}\n",
+    "}\n",
+    "\n",
+    "class ExceptionDemo {\n",
+    "    public static void main() {\n",
+    "        BaseClass b = new SubClass();\n",
+    "\n",
+    "        try {\n",
+    "            b.f();\n",
+    "        }\n",
+    "        catch (java.io.FileNotFoundException e) {\n",
+    "        }\n",
+    "        \n",
+    "        ((SubClass)b).f(); // no catch needed\n",
+    "    }\n",
+    "}"
    ]
   },
   {
