--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -713,7 +713,9 @@
    "source": [
     "# Exceptions\n",
     "\n",
-    "You only __have to specify checked exceptions__, but you can specify unchecked ones if you want as well."
+    "You only __have to specify checked exceptions__, but you can specify unchecked ones if you want as well.\n",
+    "\n",
+    "Note: if you specify unchecked, the compiler will not force them to be caught, unlike checked."
    ]
   },
   {
