--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -161,7 +161,13 @@
     "\n",
     "This is an alternative to the `BufferedReader` approach above.\n",
     "\n",
-    "You construct it similarly (but less verbosely).\n",
+    "You construct it similarly (but less verbosely).  There are also overloads to take other types of things to scan from:\n",
+    "  - a stream such as `System.in`\n",
+    "  - a `java.io.File` as you could construct with `new File(pathString)`\n",
+    "    - a file object is not text or binary yet and can be accepted a lot of places where streams are\n",
+    "      - eg. constructors of `FileInputStream` and `FileReader`\n",
+    "  - a `java.nio.file.Path`\n",
+    "  - a `String` to directly parse text\n",
     "\n",
     "It has more __overloads for types__ and will __throw__ if you get the type wrong.\n",
     "\n",
