Adding more regex stuff.

--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -17,12 +17,14 @@
     "6. Concatenation using the + operator: Strings can be concatenated using the `+` operator.\n",
     "7. Concatenation using the concat() method: The `concat()` method can be used to concatenate strings.\n",
     "\n",
-    "The expected output demonstrates the different ways to quote strings and the resulting concatenated strings."
+    "The expected output demonstrates the different ways to quote strings and the resulting concatenated strings.\n",
+    "\n",
+    "Note: verbatim strings are __required to have initial newline__ - you cannot use them as inline raw strings.  However, the initial newline is not part of the string (the rest are)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "94794875",
    "metadata": {},
    "outputs": [
@@ -928,6 +930,7 @@
     "\n",
     "- `replace` (in both str and char variants) is __not regex__ operation\n",
     "- `replaceAll` and `replaceFirst` __are regex__ operations\n",
+    "    - they can use the Perl notation `$1` etc. to replace with capture groups from the original\n",
     "- `matches` checks if the __whole string__ matches the given regex\n",
     "- `split` also takes a __regex__\n",
     "\n",
@@ -936,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "985718fd",
    "metadata": {},
    "outputs": [
@@ -945,6 +948,7 @@
      "output_type": "stream",
      "text": [
       "abc___def___ghi\n",
+      "cba def ghi\n",
       "abc___def ghi\n",
       "abc___def___ghi\n",
       "abc-def-ghi\n",
@@ -960,6 +964,9 @@
     "        \n",
     "        // Regex\n",
     "        System.out.println(s.replaceAll(\"\\\\s\", \"___\"));\n",
+    "        \n",
+    "        // Regex\n",
+    "        System.out.println(s.replaceAll(\"(a)(b)(c)\", \"$3$2$1\"));\n",
     "        \n",
     "        // Regex\n",
     "        System.out.println(s.replaceFirst(\"\\\\s\", \"___\"));\n",
@@ -1039,6 +1046,153 @@
     "    }\n",
     "}\n",
     "SplitDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70689f68",
+   "metadata": {},
+   "source": [
+    "# Regex Multiple Matches and Capture Groups\n",
+    "\n",
+    "You have to use __double escaping__ because Java doesn't yet have raw strings (except for multiline verbatim strings).  If you really wanted to you could use `\"\"\"` strings, but you'd have to have that initial (ignored) newline.\n",
+    "\n",
+    "`Pattern.compile` can be configured to do __multiline__ so that ^ and $ match on each line instead of the whole string.\n",
+    "\n",
+    "To find individual matches in a string, you have to use `matcher.find()` which is a `boolean`.  You can find more and more matches until that returns `false`. Once a match is found, you can use `matcher.start()` and `matcher.end()` to find the range of the match.\n",
+    "\n",
+    "Overloads of the `matcher.group()` method let you inspect matches further.\n",
+    "  - `group()` returns the whole match as a string (whether or not there are capture groups)\n",
+    "  - `group(0)` does the same\n",
+    "  - `group(n)` gets the nth capture group (by open parenth order)\n",
+    "  - `group(name)` gets a named capture group\n",
+    "  \n",
+    "Note: if a capture group has a quantifier after it, only the __last occurence__ is returned.  You can wrap the quantified part in another capture group to get the whole thing with repetitions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "310a2c8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "abc\n",
+      "\n",
+      "abc\n",
+      "abc\n",
+      "bc\n",
+      "c\n",
+      "5\n",
+      "8\n",
+      "\n",
+      "hi\n",
+      "\n",
+      "abc\n",
+      "\n",
+      "asdf\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.regex.*;\n",
+    "\n",
+    "class RegexDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String str1 = \"abc\";\n",
+    "        String str2 = \"(a(b(c)))\";\n",
+    "        String str3 = \"^hi\";\n",
+    "        String str4 = \"(?<Group1>abc)\";\n",
+    "        String str5 = \"((\\\\w)+)\";\n",
+    "        \n",
+    "        Pattern pattern1 = Pattern.compile(str1);\n",
+    "        Pattern pattern2 = Pattern.compile(str2);\n",
+    "        Pattern pattern3 = Pattern.compile(str3, Pattern.MULTILINE);\n",
+    "        Pattern pattern4 = Pattern.compile(str4);\n",
+    "        Pattern pattern5 = Pattern.compile(str5);\n",
+    "        \n",
+    "        String content = \"asdf abc\\nhi\";\n",
+    "        \n",
+    "        Matcher matcher1 = pattern1.matcher(content);\n",
+    "        Matcher matcher2 = pattern2.matcher(content);\n",
+    "        Matcher matcher3 = pattern3.matcher(content);\n",
+    "        Matcher matcher4 = pattern4.matcher(content);\n",
+    "        Matcher matcher5 = pattern5.matcher(content);\n",
+    "        \n",
+    "        if (matcher1.find()) {\n",
+    "            System.out.println(matcher1.group());\n",
+    "            System.out.println(matcher1.group(0));\n",
+    "        }\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        while (matcher2.find()) {\n",
+    "            System.out.println(matcher2.group(0));\n",
+    "            System.out.println(matcher2.group(1));\n",
+    "            System.out.println(matcher2.group(2));\n",
+    "            System.out.println(matcher2.group(3));\n",
+    "            \n",
+    "            System.out.println(matcher2.start());\n",
+    "            System.out.println(matcher2.end()); //exclusive\n",
+    "        }\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        if (matcher3.find()) {\n",
+    "            System.out.println(matcher3.group()); // multiline\n",
+    "        }\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        if (matcher4.find()) {\n",
+    "            System.out.println(matcher4.group(\"Group1\")); // named group\n",
+    "        }\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        if (matcher5.find()) {\n",
+    "            System.out.println(matcher5.group(1)); // whole quantified chunk\n",
+    "            System.out.println(matcher5.group(2)); // only last occurence\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "RegexDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de88ccd6",
+   "metadata": {},
+   "source": [
+    "# Regex Most Important Syntax\n",
+    "\n",
+    "This isn't specific to Java, but I wasn't sure where else to put it to make sure I'd see it frequently.\n",
+    "\n",
+    "Keep in mind, you will have to replace all `\\` with `\\\\` to do this for real (or use verbatim strings).\n",
+    "\n",
+    "- `abd|def` means abc OR def\n",
+    "- `\\s` means whitespace character\n",
+    "- `\\w` means word character (alphanum and _)\n",
+    "- `\\b` means word boundary\n",
+    "- `\\d` means digit\n",
+    "- `\\S`, `\\W`, etc. are inverses of above (capitalized)\n",
+    "- `\\` in front of any special operator escapes it to make it literal (eg. `\\\\`)\n",
+    "- `[a-zA-Z0-9]` character set\n",
+    "- `[^ \\t]` negated character set\n",
+    "- `[a\\\\-]` escaping the dash\n",
+    "- __quantifiers__ after objects (eg. capture group or character set)\n",
+    "  - `*` = 0 or more\n",
+    "  - `+` = 1 or more\n",
+    "  - `?` = 0 or 1\n",
+    "  - `{n}` = exactly n\n",
+    "  - `{n,}` = at least n\n",
+    "  - `{n,m}` = n to m (inclusive)\n",
+    "- put an additional `?` after any __quantifier__ to make it __non-greedy__\n",
+    "- `^` and `$` = beginning and end of whole string\n",
+    "  - or of individual lines if using `MULTILINE`\n",
+    "- `()` for capture groups (can be nested)\n",
+    "- `(?<name>)` for named capture groups"
    ]
   },
   {
