Adding more details about primitive casting.

--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -1293,6 +1293,85 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1198650c",
+   "metadata": {},
+   "source": [
+    "# Widening and Narrowing Cast Behavior/Weirdness\n",
+    "\n",
+    "There's some unexpected weirdness here due to the fact that smaller types rely on integer literals and don't have their own literals.\n",
+    "\n",
+    "For __widening__:\n",
+    "  - a number is __signed extended__ to the left so that it still has the same logical value (eg. -1 or 1)\n",
+    "  \n",
+    "For __narrowing__:\n",
+    "  - a number has the __left bits truncated__, which in the case of a number that fits in the range, will still work out to the same number (whether pos. or neg.)\n",
+    "  \n",
+    "For __literals__:\n",
+    "  - there is __no short literal__ in Java, so if you need a short literal, you can either rely on the above behavior, or __cast it__.\n",
+    "  - remember that when you compare a short against a literal, it will get __promoted to int__\n",
+    "  - any time you promote to int, there is a chance the literal won't match anymore (eg. if it's a __bitmask__)\n",
+    "    - you can __cast the bitmask__ or __mask out the high bits__ to get around it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0c0ad53e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "1\n",
+      "\n",
+      "1\n",
+      "-1\n",
+      "\n",
+      "true\n",
+      "false\n",
+      "true\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CastDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // short widened to int -> sign extended\n",
+    "        // otherwise, -1 would become a much smaller positive number\n",
+    "        short s = -1;\n",
+    "        int n = s;\n",
+    "        System.out.println(n);\n",
+    "        s = 1;\n",
+    "        n = s;\n",
+    "        System.out.println(n);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // int narrowed to short -> simple truncation of left part\n",
+    "        // works because both pos and neg affect rightmost first\n",
+    "        n = 1;\n",
+    "        s = (short)n;\n",
+    "        System.out.println(s);\n",
+    "        n = -1;\n",
+    "        s = (short)n;\n",
+    "        System.out.println(s);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // no short literal in Java\n",
+    "        s = (short)-1; // casting is the best you can do\n",
+    "        System.out.println(s == -1); // s promoted to int and -1 compared to -1\n",
+    "        System.out.println(s == 0xffff); // s promoted to int (0xffffffff) and compared (false)\n",
+    "        System.out.println(s == (short)0xffff); // prevents s from getting promoted because no mixture\n",
+    "        System.out.println((s & 0xffff) == 0xffff); // masking out the part we don't want\n",
+    "    }\n",
+    "}\n",
+    "CastDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "55646ae6",
    "metadata": {},
    "source": [
