Some quick additions.

--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -1372,6 +1372,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20bd7c2c",
+   "metadata": {},
+   "source": [
+    "# Floating Point vs. Integer Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c5961ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "5\n",
+      "-5\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FloatCastDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        float x = 5; // implicit widening\n",
+    "        int y = (int)x; // truncation of decimal part\n",
+    "        int z = (int)(-5.2); // -5 (not like C++ floor division)\n",
+    "        \n",
+    "        System.out.println(x);\n",
+    "        System.out.println(y);\n",
+    "        System.out.println(z);\n",
+    "        System.out.println(x == y); // y upcvonerted to float for comparison\n",
+    "    }\n",
+    "}\n",
+    "FloatCastDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "55646ae6",
    "metadata": {},
    "source": [
