--- a/java/Data Structure Practice.ipynb
+++ b/java/Data Structure Practice.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "56bb9153",
+   "metadata": {},
+   "source": [
+    "# HashMap\n",
+    "\n",
+    "TODO: deal with load factor and re-bucketing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "2cfa28b4",
@@ -100,6 +110,16 @@
     "    }\n",
     "}\n",
     "HashMapTest.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a568e4ce",
+   "metadata": {},
+   "source": [
+    "# PerimiterIterator\n",
+    "\n",
+    "I wanted to see if this was an easier to way to do the types of problems where you swirl around a matrix in a spiral.  I'm not sure it helped that much given how much code it is."
    ]
   },
   {
@@ -276,6 +296,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "066e0181",
+   "metadata": {},
+   "source": [
+    "# QuickSort"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "2dfd2c7e",
@@ -339,9 +367,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8647bda1",
+   "metadata": {},
+   "source": [
+    "# LinkedList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "730c5551",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "10\n",
+      "15\n",
+      "1\n",
+      "1\n",
+      "\n",
+      "[10,15,20,25]\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Iterator;\n",
+    "\n",
+    "public class LinkedList<T> implements Iterable<T> {\n",
+    "    private static class Node<T> {\n",
+    "        T value;\n",
+    "        \n",
+    "        Node<T> next;\n",
+    "        Node<T> previous;\n",
+    "        \n",
+    "        public Node(T value) {\n",
+    "            this.value = value;\n",
+    "        }\n",
+    "        \n",
+    "        public Node(T value, Node<T> next, Node<T> previous) {\n",
+    "            this.value = value;\n",
+    "            this.next = next;\n",
+    "            this.previous = previous;\n",
+    "        }\n",
+    "        \n",
+    "        @Override\n",
+    "        public String toString() {\n",
+    "            return value.toString();\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    private Node<T> head;\n",
+    "    private Node<T> tail;\n",
+    "    \n",
+    "    public int size() {\n",
+    "        Node<T> cur = head;\n",
+    "        int count = 0;\n",
+    "        while (cur != null) {\n",
+    "            ++count;\n",
+    "            cur = cur.next;\n",
+    "        }\n",
+    "        \n",
+    "        return count;\n",
+    "    }\n",
+    "    \n",
+    "    private Node<T> seek(int index) {\n",
+    "        // could store size and choose to go backward as optimization\n",
+    "        \n",
+    "        Node<T> cur = head;\n",
+    "        while (index > 0) {\n",
+    "            if (cur == null) {\n",
+    "                throw new IndexOutOfBoundsException();\n",
+    "            }\n",
+    "            cur = cur.next;\n",
+    "            --index;\n",
+    "        }\n",
+    "        if (cur == null) {\n",
+    "            throw new IndexOutOfBoundsException();\n",
+    "        }\n",
+    "        \n",
+    "        return cur;\n",
+    "    }\n",
+    "    \n",
+    "    public T get(int index) {\n",
+    "        return seek(index).value;\n",
+    "    }\n",
+    "    \n",
+    "    public void add(T value) {\n",
+    "        if (head == null) {\n",
+    "            head = new Node<T>(value);\n",
+    "            tail = head;\n",
+    "        }\n",
+    "        else {\n",
+    "            tail.next = new Node<T>(value, null, tail);\n",
+    "            tail = tail.next;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    // TODO: properly account for head or tail being different (oops)\n",
+    "    public void add(int index, T value) {\n",
+    "        Node<T> node = seek(index);\n",
+    "        \n",
+    "        Node<T> newNode = new Node<T>(value, node, node.previous);\n",
+    "        node.previous = newNode;\n",
+    "        newNode.previous.next = newNode;\n",
+    "    }\n",
+    "    \n",
+    "    public void set(int index, T value) {\n",
+    "        seek(index).value = value;\n",
+    "    }\n",
+    "    \n",
+    "    public int indexOf(T value) {\n",
+    "        Node<T> cur = head;\n",
+    "        int index = 0;\n",
+    "        while (cur != null) {\n",
+    "            if (cur.value.equals(value)) {\n",
+    "                return index;\n",
+    "            }\n",
+    "            ++index;\n",
+    "            cur = cur.next;\n",
+    "        }\n",
+    "        \n",
+    "        return -1;\n",
+    "    }\n",
+    "    \n",
+    "    public int lastIndexOf(T value) {\n",
+    "        Node<T> cur = tail;\n",
+    "        int index = size() - 1;\n",
+    "        while (cur != null) {\n",
+    "            if (cur.value.equals(value)) {\n",
+    "                return index;\n",
+    "            }\n",
+    "            --index;\n",
+    "            cur = cur.previous;\n",
+    "        }\n",
+    "        \n",
+    "        return -1;\n",
+    "    }\n",
+    "    \n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "        List<String> elems = new ArrayList<>();\n",
+    "        for (T val : this) {\n",
+    "            elems.add(val.toString());\n",
+    "        }\n",
+    "        return String.format(\"[%s]\", String.join(\",\", elems));\n",
+    "    }\n",
+    "    \n",
+    "    @Override\n",
+    "    public Iterator<T> iterator() {\n",
+    "        Node<T> head = this.head; // needs to be effectively final\n",
+    "        \n",
+    "        return new Iterator<T>() {\n",
+    "            Node<T> current = head;\n",
+    "            \n",
+    "            public boolean hasNext() {\n",
+    "                return current != null;\n",
+    "            }\n",
+    "            \n",
+    "            public T next() {\n",
+    "                if (current == null) {\n",
+    "                    throw new IndexOutOfBoundsException();\n",
+    "                }\n",
+    "                \n",
+    "                T value = current.value;\n",
+    "                current = current.next;\n",
+    "                return value;\n",
+    "            }\n",
+    "        };\n",
+    "    }\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        LinkedList<Integer> l = new LinkedList<>();\n",
+    "        l.add(10);\n",
+    "        l.add(20);\n",
+    "        l.add(30);\n",
+    "        l.add(1, 15);\n",
+    "        l.set(3, 25);\n",
+    "        \n",
+    "        System.out.println(l.size());\n",
+    "        System.out.println(l.get(0));\n",
+    "        System.out.println(l.get(1));\n",
+    "        System.out.println(l.indexOf(15));\n",
+    "        System.out.println(l.lastIndexOf(15));\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(l);\n",
+    "        l.forEach(System.out::println);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "LinkedList.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "730c5551",
+   "id": "e212dc67",
    "metadata": {},
    "outputs": [],
    "source": []
