More practice data structures.

--- a/java/Data Structure Practice.ipynb
+++ b/java/Data Structure Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56bb9153",
+   "id": "0d30df50",
    "metadata": {},
    "source": [
     "# HashMap\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a568e4ce",
+   "id": "7df2f999",
    "metadata": {},
    "source": [
     "# PerimiterIterator\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066e0181",
+   "id": "81bc8ad6",
    "metadata": {},
    "source": [
     "# QuickSort"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8647bda1",
+   "id": "0fb6fcb5",
    "metadata": {},
    "source": [
     "# LinkedList"
@@ -568,9 +568,412 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da9d1b65",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2217f403",
+   "metadata": {},
+   "source": [
+    "# Super Quick Warmup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0f439115",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, there!\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Greeter {\n",
+    "    private String greeting;\n",
+    "    \n",
+    "    public Greeter(String greeting) {\n",
+    "        this.greeting = greeting;\n",
+    "    }\n",
+    "    \n",
+    "    public void greet() {\n",
+    "        System.out.println(greeting);\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        var greeter = new Greeter(\"Hi, there!\");\n",
+    "        greeter.greet();\n",
+    "    }\n",
+    "}\n",
+    "Greeter.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1809ad93",
+   "metadata": {},
+   "source": [
+    "# Prefix Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f693bf38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.Arrays;\n",
+    "import java.util.Stack;\n",
+    "\n",
+    "public class Calculator {\n",
+    "    private enum Operation {\n",
+    "        PLUS {\n",
+    "            public double apply(double value1, double value2) {\n",
+    "                return value1 + value2;\n",
+    "            }\n",
+    "        },\n",
+    "        MINUS { \n",
+    "            public double apply(double value1, double value2) {\n",
+    "                return value1 - value2;\n",
+    "            }\n",
+    "        },\n",
+    "        TIMES {\n",
+    "            public double apply(double value1, double value2) {\n",
+    "                return value1 * value2;\n",
+    "            }\n",
+    "        },\n",
+    "        DIVIDE {\n",
+    "            public double apply(double value1, double value2) {\n",
+    "                return value1 / value2;\n",
+    "            }\n",
+    "        };\n",
+    "        \n",
+    "        public static Operation valueOf(char op) {\n",
+    "            switch (op) {\n",
+    "                case '+':\n",
+    "                    return PLUS;\n",
+    "                case '-':\n",
+    "                    return MINUS;\n",
+    "                case '*':\n",
+    "                    return TIMES;\n",
+    "                default:\n",
+    "                    return DIVIDE;\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        public abstract double apply(double value1, double value2);\n",
+    "    }\n",
+    "    \n",
+    "    private static Stream<String> subtokenize(String token) {\n",
+    "        List<String> out = new ArrayList<>();\n",
+    "        StringBuilder num = new StringBuilder();\n",
+    "        for (int i = 0; i < token.length() ; i++) {\n",
+    "            char c = token.charAt(i);\n",
+    "            if (Character.isDigit(c) || c == '.') {\n",
+    "                num.append(c);\n",
+    "            }\n",
+    "            else {\n",
+    "                if (!num.isEmpty()) {\n",
+    "                    out.add(num.toString());\n",
+    "                    num = new StringBuilder();\n",
+    "                }\n",
+    "                out.add(new String(new char[] {c}));\n",
+    "            }\n",
+    "        }\n",
+    "        if (!num.isEmpty()) {\n",
+    "            out.add(num.toString());\n",
+    "        }\n",
+    "        \n",
+    "        return out.stream();\n",
+    "    }\n",
+    "    \n",
+    "    private static String[] tokenize(String text) {\n",
+    "        String[] rawTokens = text.trim().split(\"\\s+\");\n",
+    "        \n",
+    "        return Arrays.stream(rawTokens).flatMap(Calculator::subtokenize)\n",
+    "                                       .toArray(String[]::new);\n",
+    "    }\n",
+    "    \n",
+    "    public static double calculate(String text) {\n",
+    "        String[] tokens = tokenize(text);\n",
+    "        \n",
+    "        Iterator<String> iter = Arrays.stream(tokens).iterator();\n",
+    "        \n",
+    "        Stack<Object> s = new Stack<>();\n",
+    "        \n",
+    "        while (iter.hasNext()) {\n",
+    "            String nextToken = iter.next();\n",
+    "            if (nextToken.equals(\"(\")) {\n",
+    "               char op = iter.next().charAt(0);\n",
+    "               s.push(Operation.valueOf(op));\n",
+    "            }\n",
+    "            else if (Character.isDigit(nextToken.charAt(0))) {\n",
+    "                s.push(Double.parseDouble(nextToken));\n",
+    "            }\n",
+    "            else if (nextToken.equals(\")\")) {\n",
+    "                double val2 = (Double)(s.pop());\n",
+    "                double val1 = (Double)(s.pop());\n",
+    "                Operation op = (Operation)(s.pop());\n",
+    "                \n",
+    "                s.push(op.apply(val1, val2));\n",
+    "            }\n",
+    "            else {\n",
+    "                throw new UnsupportedOperationException();\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        return (Double)(s.pop());\n",
+    "    }\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        System.out.println(calculate(\"(  +1 (* 2.1 71))\"));\n",
+    "    }\n",
+    "}\n",
+    "Calculator.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc440857",
+   "metadata": {},
+   "source": [
+    "# Trie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "df089c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[B, Bo, Boa, Bob, Bot, Charlie]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.List;\n",
+    "\n",
+    "public class Trie {\n",
+    "    boolean isKey;\n",
+    "    \n",
+    "    Map<Character, Trie> children = new TreeMap<>();\n",
+    "    \n",
+    "    public void add(String text) {\n",
+    "        if (text.isEmpty()) {\n",
+    "            isKey = true;\n",
+    "            return;\n",
+    "        }\n",
+    "        \n",
+    "        children.computeIfAbsent(text.charAt(0), k -> new Trie()).add(text.substring(1));\n",
+    "    }\n",
+    "    \n",
+    "    public List<String> sorted() {\n",
+    "        List<String> ret = new ArrayList<>();\n",
+    "        getSorted(ret, \"\");\n",
+    "        \n",
+    "        return ret;\n",
+    "    }\n",
+    "    \n",
+    "    private void getSorted(List<String> list, String prefix) {\n",
+    "        if (isKey) {\n",
+    "            list.add(prefix);\n",
+    "        }\n",
+    "        for (var entry : children.entrySet()) {\n",
+    "            entry.getValue().getSorted(list, prefix + entry.getKey());\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        Trie trie = new Trie();\n",
+    "        trie.add(\"Bob\");\n",
+    "        trie.add(\"Boa\");\n",
+    "        trie.add(\"Bo\");\n",
+    "        trie.add(\"B\");\n",
+    "        trie.add(\"Charlie\");\n",
+    "        trie.add(\"Bot\");\n",
+    "        \n",
+    "        System.out.println(trie.sorted());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Trie.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67182065",
+   "metadata": {},
+   "source": [
+    "# Producer/Consumer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e289edc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5344110\n",
+      "5344111\n",
+      "5344112\n",
+      "5344113\n",
+      "5344114\n",
+      "5344115\n",
+      "5344116\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread \"Thread-1\" java.lang.RuntimeException\n",
+      "\tat REPL.$JShell$67$ProducerConsumer.lambda$main$0($JShell$67.java:33)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:1623)\n",
+      "Exception in thread \"Thread-2\" java.lang.RuntimeException\n",
+      "\tat REPL.$JShell$67$ProducerConsumer.lambda$main$1($JShell$67.java:50)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:1623)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.concurrent.*;\n",
+    "\n",
+    "class ProducerConsumer {\n",
+    "    public static void main() {\n",
+    "        Queue<Long> q = new ArrayDeque<>();\n",
+    "        \n",
+    "        Thread producer = new Thread(() -> {\n",
+    "            while (true) {\n",
+    "                long seconds = System.nanoTime() / 1000000000;\n",
+    "                synchronized(q) {\n",
+    "                    q.add(seconds);\n",
+    "                    q.notify();\n",
+    "                }\n",
+    "                try {\n",
+    "                    Thread.sleep(1000);\n",
+    "                }\n",
+    "                catch (InterruptedException e) {\n",
+    "                    throw new RuntimeException();\n",
+    "                }\n",
+    "            }\n",
+    "        });\n",
+    "        \n",
+    "        Thread consumer = new Thread(() -> {\n",
+    "            try {\n",
+    "                while (true) {\n",
+    "                    synchronized(q) {\n",
+    "                        q.wait();\n",
+    "                        System.out.println(q.poll());\n",
+    "                    }\n",
+    "\n",
+    "                    Thread.sleep(1000);\n",
+    "                }\n",
+    "            }\n",
+    "            catch (InterruptedException e) {\n",
+    "                throw new RuntimeException();\n",
+    "            }\n",
+    "        });\n",
+    "        \n",
+    "        producer.start();\n",
+    "        consumer.start();\n",
+    "        \n",
+    "        try { \n",
+    "            Thread.sleep(10000);\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "        }\n",
+    "        \n",
+    "        producer.interrupt();\n",
+    "        consumer.interrupt();\n",
+    "        \n",
+    "        try {\n",
+    "            producer.join();\n",
+    "            consumer.join();\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ProducerConsumer.main();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b807b07e",
+   "metadata": {},
+   "source": [
+    "# Dot-Product Warmup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ff630de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Warmup {\n",
+    "    public static <T extends Number> double dotProduct(List<T> left, List<T> right) {\n",
+    "        if (left.size() != right.size()) {\n",
+    "            throw new IllegalArgumentException();\n",
+    "        }\n",
+    "        \n",
+    "        double sum = 0;\n",
+    "        for (int i = 0; i < left.size(); i++) {\n",
+    "            sum += left.get(i).doubleValue() * right.get(i).doubleValue();\n",
+    "        }\n",
+    "        \n",
+    "        return sum;\n",
+    "    }\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        List<Integer> l1 = List.of(1, 2, 3, 4, 5);\n",
+    "        List<Integer> l2 = List.of(0, 10, 20, 30, 40);\n",
+    "        \n",
+    "        System.out.println(dotProduct(l1, l2));\n",
+    "    }\n",
+    "}\n",
+    "Warmup.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e212dc67",
+   "id": "e574f97f",
    "metadata": {},
    "outputs": [],
    "source": []
